# stock-prediction-ml

./: .gitignore  README.md  config.env.example  main.py  pyproject.toml
.github/.workflows/: ci.yml
.github/workflows/: ci.yml
notebooks/: 01_api_pull.ipynb  02_data_validation.ipynb  03_eda.ipynb  04_feature_engineering.ipynb  05_baseline.ipynb
src/stock_prediction_ml/: main.py
src/stock_prediction_ml/data_validation/: validation.py
src/stock_prediction_ml/marketstack/: __init__.py  pull.py
tests/: test_main.py  test_pull.py  test_validation.py
