[project]
name = "stock-prediction-ml"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "ruff>=0.14.1",
]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E","F","I","UP"]  # errors, formatting, imports, pyupgrade

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
