[project]
name = "stock-prediction-ml"
version = "0.1.0"
description = "Personal portfolio project for stock price prediction using E2E ML model"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.0.1",
    "pandas>=2.3.3",
    "pyarrow>=22.0.0",
    "pytest>=8.4.2",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "ruff>=0.14.1",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E","F","I","UP"]  # errors, formatting, imports, pyupgrade

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.setuptools.packages.find]
where = ["src"]
