[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "stock-prediction-ml"
version = "0.1.0"
description = "Personal portfolio project for stock price prediction using E2E ML model"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "great-expectations>=1.8.1",
    "ipykernel>=7.0.1",
    "pandas>=2.3.3",
    "pyarrow>=22.0.0",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
]

[tool.hatch.build.targets.wheel]
packages = ["src/stock_prediction_ml"]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "ruff>=0.14.1",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
pythonpath = ["src"]
filterwarnings = [
    "ignore::marshmallow.warnings.ChangedInMarshmallow4Warning",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff.lint]
select = ["E","F","I","UP"]

[tool.ruff.lint.isort]
known-first-party = ["stock_prediction_ml"]
